# IntroDataScience

./: pyproject.toml
Stage_2_modules/module_1/: case_study_1.html  case_study_1.py
__marimo__/session/: case_study_1.py.json
docs/: github_guide.md  polars-data-wrangling.md
example_notebooks/: 01_python_basics.py  02_data_wrangling.py  03_plotting.py
example_notebooks/__marimo__/session/: 01_python_basics.py.json  02_data_wrangling.py.json  03_plotting.py.json  ex01_fundamentals.py.json
exercises/: ex01_fundamentals.py  ex02_wrangle.py  ex03_plot.py
exercises/__marimo__/session/: ex03_plot.py.json
my_submission/: ABOUT.md  sydney-christopher-week1-task.md
