[project]
name = "intro-datascience"
version = "0.1.0"
description = "Beginner-friendly introduction to data science for Johannesburg SA 2026 trainings"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "marimo>=0.19.10",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "pyzmq>=27.1.0",
    "statsmodels>=0.14.6",
]
